<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JaagrT</string>
    <string name="title_activity_login">JaagrT Login</string>
    <string name="title_activity_register">JaagrT Register</string>
    <string name="title_activity_pick_pic">Pick Picture Activity</string>
    <string name="title_activity_profile_edit">Edit Profile</string>
    <string name="title_activity_login_act">Login_act</string>
    <string name="title_activity_get_user_details">GetUserDetails</string>
    <string name="title_activity_verify_phone">VerifyPhone</string>
    <string name="title_activity_panic">Panic</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="title_activity_pick_contact">PickContact</string>
    <string name="app_id">630451703747709</string>
    <string name="forgot_password"><u>Forgot password ?</u></string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_using_email">Or Login using Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Signup</string>
    <string name="done">Done</string>
    <string name="sign_up_using_facebook">Signup using Facebook</string>
    <string name="sign_up_using_email">Or Signup using Email</string>
    <string name="login">Login</string>
    <string name="additional_info">Additional Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone Number</string>
    <string name="not_now">Not Now</string>
    <string name="next">Next</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="title_activity_settings">Settings</string>
    <string name="status_bar_desc">Status bar Replacement</string>
    <string name="alerts">Alerts</string>
    <string name="incoming_alerts">Incoming Alerts</string>
    <string name="outgoing_alerts">Outgoing Alerts</string>
    <string name="general">GENERAL SETTINGS</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="alert_message">Alert Message</string>
    <string name="back">Back</string>
    <string name="pop_up_notifications">Notification Pop ups</string>
    <string name="attributions">Attributions</string>
    <string name="licenses">Licenses</string>
    <string name="incoming_alert_settings">INCOMING ALERT SETTINGS</string>
    <string name="outgoing_alert_settings">OUTGOING ALERT SETTINGS</string>
    <string name="alert_range">Alert Range</string>
    <string name="ten_kms">10 Kms</string>
    <string name="contact_profile_desc">Contact profile picture</string>
    <string name="contact_name">Contact Name</string>
    <string name="status_bar_replacement">Status bar Replacement</string>
    <string name="title_activity_profile">Profile</string>
    <string name="no_circles">No Circles Found. Click \'+\' to add a new Circle</string>
    <string name="edit_profile_pic">Edit profile Picture</string>
    <string name="primary_details">PRIMARY DETAILS</string>
    <string name="secondary_emails">SECONDARY EMAILS</string>
    <string name="secondary_phones">SECONDARY PHONES</string>
    <string name="add_sec_phone">add secondary phone</string>
    <string name="add_sec_emails">add Secondary emails</string>
    <string name="title_activity_invite">Invite</string>
    <string name="invite">Send Invite</string>
    <string name="get_from_contacts">Add from Contacts</string>
    <string name="add_email">ADD EMAIL</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="password_lost">Oops! Happens to the best of us.\n Type in your Email and we\'ll send password recovery link to that Email.</string>
    <string name="reset_password">Reset password</string>

</resources>
