<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    tools:context="org.jaagrT.views.About">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/aboutBtn"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about" />

            <Button
                android:id="@+id/helpBtn"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/help" />

            <Button
                android:id="@+id/feedbackBtn"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/feedback" />

            <Button
                android:id="@+id/attributionsBtn"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/attributions" />

            <Button
                android:id="@+id/licensesBtn"
                style="@style/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/licenses" />


        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
