<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    tools:context="org.jaagrT.views.Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/alerts"
                        android:textColor="@color/gray"
                        android:textSize="14sp" />

                    <View style="@style/HorizontalDividerThinGrayLight" />

                    <Button
                        android:id="@+id/inAlertsBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_incoming_alerts"
                        android:text="@string/incoming_alerts" />

                    <Button
                        android:id="@+id/outAlertsBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_outgoing_alerts"
                        android:text="@string/outgoing_alerts" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/general"
                        android:textColor="@color/gray"
                        android:textSize="14sp" />

                    <View style="@style/HorizontalDividerThinGrayLight" />

                    <Button
                        android:id="@+id/alertMessageBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_alert_message"
                        android:text="@string/alert_message" />

                    <Button
                        android:id="@+id/notificationPopUpBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_pop_up"
                        android:text="@string/pop_up_notifications" />


                    <Button
                        android:id="@+id/logoutBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_logout"
                        android:text="@string/logout" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/aboutBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_about"
                        android:text="@string/about" />

                    <Button
                        android:id="@+id/helpBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_help"
                        android:text="@string/help" />

                    <Button
                        android:id="@+id/feedbackBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_feedback"
                        android:text="@string/feedback" />

                    <Button
                        android:id="@+id/attributionsBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_attributions"
                        android:text="@string/attributions" />

                    <Button
                        android:id="@+id/licensesBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_licenses"
                        android:text="@string/licenses" />


                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
