<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/facebookBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/facebook_btn"
            android:paddingEnd="30dp"
            android:paddingStart="50dp"
            android:text="@string/login_with_facebook"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="20sp"
            android:text="@string/login_using_email"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/emailBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            app:baseColor="@android:color/black"
            app:floatingLabel="highlight"
            app:minCharacters="3"
            app:primaryColor="@color/teal_400" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/passwordBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            app:baseColor="@android:color/black"
            app:floatingLabel="highlight"
            app:minCharacters="1"
            app:primaryColor="@color/teal_400" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signUpBtn"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/flat_button"
                android:text="@string/sign_up" />

            <Button
                android:id="@+id/loginBtn"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/flat_button"
                android:text="@string/done" />

        </LinearLayout>

        <Button
            android:id="@+id/forgotPasswordBtn"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/forgot_password"
            android:textColor="@drawable/color_selector"
            android:textSize="14sp" />


    </LinearLayout>


</RelativeLayout>