<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editBoxLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:text="@string/additional_info"
        android:textAllCaps="true"
        android:textColor="@color/teal_400"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/editBoxLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/firstNameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            app:baseColor="@color/black"
            app:floatingLabel="highlight"
            app:minCharacters="3"
            app:primaryColor="@color/teal_400" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/lastNameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            app:baseColor="@color/black"
            app:floatingLabel="highlight"
            app:minCharacters="1"
            app:primaryColor="@color/teal_400" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/phoneBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            app:baseColor="@color/black"
            app:floatingLabel="highlight"
            app:minCharacters="10"
            app:primaryColor="@color/teal_400" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View style="@style/HorizontalDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/skipBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bottom_button"
                android:text="@string/not_now"
                android:textColor="@android:color/black" />

            <View style="@style/VerticalDivider" />

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bottom_button"
                android:text="@string/next"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
