<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.jaagrT.views.Settings">

    <ImageView
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height"
        android:background="@color/teal_500"
        android:contentDescription="@string/status_bar_desc" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/statusBar"
        android:background="@color/teal_500"></android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/alerts"
                        android:textColor="@color/gray"
                        android:textSize="14sp" />

                    <View style="@style/HorizontalDividerThinGrayLight" />

                    <Button
                        android:id="@+id/inAlertBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_right_arrow"
                        android:text="@string/incoming_alerts" />

                    <Button
                        android:id="@+id/outAlertBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_right_arrow"
                        android:text="@string/outgoing_alerts" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/general"
                        android:textColor="@color/gray"
                        android:textSize="14sp" />

                    <View style="@style/HorizontalDividerThinGrayLight" />

                    <Button
                        android:id="@+id/logoutBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_right_arrow"
                        android:text="@string/logout" />

                    <Button
                        android:id="@+id/aboutBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_right_arrow"
                        android:text="@string/about" />

                    <Button
                        android:id="@+id/helpAndFeedBackBtn"
                        style="@style/SettingsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_right_arrow"
                        android:text="@string/help_and_feedback" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
