<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    android:fitsSystemWindows="true"
    tools:context="org.jaagrT.views.ForgotPassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailBox"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/password_lost"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="normal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/emailBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        app:baseColor="@color/black"
        app:floatingLabel="highlight"
        app:iconLeft="@drawable/ic_email"
        app:iconPadding="0dp"
        app:minCharacters="3"
        app:primaryColor="@color/teal_400" />

    <Button
        android:id="@+id/resetPassword"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailBox"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/flat_button"
        android:text="@string/reset_password" />

</RelativeLayout>
