<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:fitsSystemWindows="true"
    tools:context="org.jaagrT.views.Invite">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_500"
        android:fitsSystemWindows="false" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLayout"
        android:layout_below="@+id/toolbar"
        android:background="@color/background_material_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/add_email"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/addEmailFieldBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:background="@null"
                    android:contentDescription="@string/add_sec_emails"
                    android:src="@drawable/ic_content_add" />

            </LinearLayout>

            <com.melnykov.fab.ObservableScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/emailFieldLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

            </com.melnykov.fab.ObservableScrollView>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View style="@style/HorizontalDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pickContactBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bottom_button"
                android:text="@string/get_from_contacts"
                android:textColor="@android:color/black" />

            <View style="@style/VerticalDivider" />

            <Button
                android:id="@+id/inviteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bottom_button"
                android:text="@string/invite"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
